# cas-proto

./: CMakeLists.txt  LICENSE  README.md  operator-lemmas.html
examples/: CMakeLists.txt  README.md  cubic-formula.cpp  quadratic-formula.cpp
include/cas-proto/: BinaryOperator.h  Blank.h  Constant.h  ConstantDefinition.h  ConstantExpression.h  ConstantSymbol.h  Definition.h  Difference.h  DifferenceDefinition.h  Equation.h  Exponent.h  ExponentDefinition.h  Expression.h  Expression.hpp  ExpressionBase.h  ExpressionVisitor.h  Formula.h  Function.h  FunctionDefinition.h  FunctionSymbol.h  ImaginaryDefinition.h  Natural.h  NcBinaryOperator.h  Negate.h  NegateDefinition.h  Object.h  OneDefinition.h  Pi.h  Product.h  ProductDefinition.h  Quotient.h  QuotientDefinition.h  Rational.h  Ref.h  SquareRoot.h  SquareRootDefinition.h  Stat.h  Sum.h  SumDefinition.h  Symbol.h  (+10 more)
src/: BinaryOperator.cpp  Blank.cpp  Constant.cpp  ConstantDefinition.cpp  ConstantSymbol.cpp  Definition.cpp  Difference.cpp  DifferenceDefinition.cpp  Exponent.cpp  ExponentDefinition.cpp  ExpressionBase.cpp  Function.cpp  FunctionDefinition.cpp  FunctionSymbol.cpp  ImaginaryDefinition.cpp  Natural.cpp  NcBinaryOperator.cpp  Negate.cpp  NegateDefinition.cpp  Object.cpp  OneDefinition.cpp  Product.cpp  ProductDefinition.cpp  QuadraticEquation.cpp  QubicFormula.cpp  Quotient.cpp  QuotientDefinition.cpp  Rational.cpp  SquareRoot.cpp  SquareRootDefinition.cpp  Stat.cpp  Sum.cpp  SumDefinition.cpp  SymbolBase.cpp  TwoDefinition.cpp  UnaryOperator.cpp  Variable.cpp  VariableDefinition.cpp  VariableSymbol.cpp  ZeroDefinition.cpp
